[package]
name = "recreds"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = { git = "https://github.com/binsc/halo2.git" }
bitvec = "1.0.1"
halo2curves = { version = "0.6.1" }
criterion = "0.5.1"
rand = "0.8.5"
rand_core = "0.6.4"
ff={version="0.13.0", features = ["bits"]}
# halo2_poseidon ={ git = "https://github.com/privacy-scaling-explorations/poseidon-gadget"}
# halo2_poseidon={ path = "halo2_poseidon" }
group = "0.13"
halo2-native-ecc = {path="halo2-native-ecc"}
ark-std = { version = "0.4.0", features = ["print-trace"] }