[package]
name = "recreds"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.0" }
bitvec = "1.0.1"
halo2curves = { version = "0.6.1" }
criterion = "0.5.1"
rand = "0.8.5"
rand_core = "0.6.4"
ff={version="0.13.0", features = ["bits"]}
group = "0.13"
halo2-native-ecc = {path="halo2-native-ecc"}
ark-std = { version = "0.4.0", features = ["print-trace"] }
ecc = {path="./halo2wrong/ecc"}
maingate = {path="./halo2wrong/maingate"} 
integer =  {path="./halo2wrong/integer"} 
pasta_curves= {version = "0.5.1"}


bencher = "0.1"
itertools = "0.13.0" # for compatibility msrv 1.75
lazy_static = "1.4"
log = "0.4"
once_cell = "1.19"
rand_chacha = "0.3.0"
rand_xorshift = "0.3"
subtle = {version = "2", optional = true}
thiserror = "1.0"
poseidon-circuit = { path = "poseidon-circuit"}



[profile.test]
opt-level = 3
debug-assertions = true