[package]
name = "halo2-native-ecc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/binsc/halo2.git" }
halo2curves = { version = "0.6.1" }
ark-std = { version = "0.4.0", features = ["print-trace"] }

[features]
default = []
# default = [ "verbose" ]
verbose = []