[package]
name = "halo2-native-ecc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# halo2_proofs = { git = "https://github.com/binsc/halo2.git" }
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.0" }
halo2curves = { version = "0.1.0", features = [ "derive_serde" ] }
ark-std = { version = "0.4.0", features = ["print-trace"] }
ff="0.13.1"

[features]
default = []
# default = [ "verbose" ]
verbose = []