[package]
name = "poseidon-base"
version = "0.1.0"
edition = "2021"

[dependencies]
bencher = "0.1"
bitvec = "1"
ff = "0.13"
halo2curves = { version = "0.1.0", features = [ "derive_serde" ] }
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.0" }
itertools = "0.13.0" # for compatibility msrv 1.75
lazy_static = "1.4"
log = "0.4"
once_cell = "1.19"
rand = "0.8"
rand_chacha = "0.3.0"
rand_xorshift = "0.3"
subtle = {version = "2", optional = true}
thiserror = "1.0"


[features]
default = ["short"]
short = []
test = ["subtle"]
legacy = []