[package]
name = "poseidon-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
poseidon-base = { path = "../poseidon-base", features = ["test"] }
bencher = "0.1"
bitvec = "1"
ff = "0.13"
halo2curves = { version = "0.1.0", features = [ "derive_serde" ] }
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.0" }
itertools = "0.13.0" # for compatibility msrv 1.75
lazy_static = "1.4"
log = "0.4"
once_cell = "1.19"
rand = "0.8"
rand_chacha = "0.3.0"
rand_xorshift = "0.3"
subtle = "2"
thiserror = "1.0"





[features]
default = ["halo2_proofs/parallel_syn", "short"]
# Use an implementation using fewer rows (8) per permutation.
short = ["poseidon-base/short"]
# printout the layout of circuits for demo and some unittests
print_layout = ["halo2_proofs/dev-graph"]
legacy = []
# "halo2_proofs/parallel_syn" is turned on by default for compilation
# "parallel_syn" can be turned on/off via `zkevm-circuits`
parallel_syn = ["halo2_proofs/parallel_syn"]

